<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BRiDGE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_import_contacts">Import Contacts</string>
    <string name="import_">Import</string>
    <string name="phone_contacts">Phone Contacts</string>
    <string name="facebook_friends">Facebook Friends</string>
    <string name="title_activity_import_phone_contacts">Import Phone Contacts</string>
    <string name="title_activity_contact_list">Contact List</string>
    <string name="title_activity_view_contact">View Contact</string>
    <string name="title_activity_merge_contact">Merge Contact</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_conversation_list">Conversation List</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="title_activity_qrscanner">QRScanner</string>
    <string name="compose_sms">Compose SMS</string>

    <!--Button Names-->
    <string name="conversation_list">Conversation List</string>
    <string name="contact_list">Contact List</string>

    <string name="new_message">New Message</string>
    <string name="new_contact">New Contact</string>

    <string name="import_contact">Import Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="merge_contact">Merge Contact</string>

    <string name="import_qr_code">Import QR Code</string>
    <string name="export_qr_code">Export QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>

    <string name="link_to_email_or_social_media">Link to Email or Social Media</string>
    <string name="import_this">Import</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="link">Link</string>
    <string name="send">Send</string>
    <string name="merge">Merge</string>


</resources>
