<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversation_list"
        android:id="@+id/buttonConversationList"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_list"
        android:id="@+id/buttonContactList"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/merge_contact"
        android:id="@+id/buttonMergeContact"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_qr_code"
        android:id="@+id/buttonImportQRCode"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/buttonMergeContact"
        android:layout_toStartOf="@+id/buttonMergeContact" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:layout_toStartOf="@+id/buttonImportQRCode"
        android:layout_above="@+id/buttonContactList"
        android:layout_alignRight="@+id/buttonMergeContact"
        android:layout_alignEnd="@+id/buttonMergeContact" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="First Name"
        android:ems="10"
        android:id="@+id/editTextFirstName"
        android:layout_below="@+id/buttonImportQRCode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonMergeContact"
        android:layout_alignEnd="@+id/buttonMergeContact" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Last Name"
        android:ems="10"
        android:id="@+id/editTextLastName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/editTextLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonSave" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/buttonDelete"
        android:layout_below="@+id/listView"
        android:layout_toLeftOf="@+id/buttonSave"
        android:layout_toStartOf="@+id/buttonSave" />

</RelativeLayout>