<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.caffeinecraft.bridge.ImportContacts">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/importContactSource">

        <RadioButton
            android:id="@+id/phone_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_contacts"
            android:checked="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:id="@+id/facebook_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_friends"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RadioGroup>

    <Button
        android:id="@+id/importGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_"
        android:layout_below="@+id/importContactSource"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
